Fix package name, delete package-lock

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "compeer_temp",
+  "name": "compeer",
   "version": "0.0.1",
   "description": "compeer description",
   "main": "index.js",
