--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "repository": "https://github.com/compeer/compeer.git",
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.3.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.20",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.1",
+    "ethers": "^5.0.24",
+    "hardhat": "^2.0.7",
     "mocha": "^8.2.1",
-    "nyc": "^15.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
