--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^3.3.0",
+    "@typechain/ethers-v5": "^5.0.0",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.20",
@@ -16,8 +17,11 @@
     "ethereum-waffle": "^3.2.1",
     "ethers": "^5.0.24",
     "hardhat": "^2.0.7",
+    "hardhat-typechain": "^0.3.4",
     "mocha": "^8.2.1",
+    "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
+    "typechain": "^4.0.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
